<resources>
    <string name="app_name" translatable="false">EV Charge Timer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_bugreport">Bug Report</string>

    <!-- Strings related to Settings -->
    <string name="value_not_empty">Value cannot be empty</string>

    <!-- Example settings for Charging -->
    <string name="pref_header_charging">Battery and charging</string>

    <string name="pref_title_voltage">Default voltage in network, V</string>
    <string name="pref_title_amperage">Default consuming amperage, A</string>
    <string name="pref_title_charge_loss">Charge loss, %</string>
    <string name="pref_title_battery_capacity">Usable battery capacity, kWh</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notification settings</string>

    <string name="pref_title_allow_app_notifications">Application notifications</string>
    <string name="pref_description_allow_app_notifications">Custom sound is used to make it easier to distinguish from other notifications</string>

    <string name="pref_title_allow_calendar_notifications">Calendar notifications</string>
    <string name="pref_description_allow_calendar_notifications">Enable notifications with default reminders.</string>

    <string name="pref_title_allow_asking_for_calendar_permissions">Ask for calendar permission</string>
    <string name="pref_description_allow_asking_for_calendar_permissions">Permission is required to be able to create notifications faster and easier.\n
It allows to create notifications in one click, change reminding time or the background color.
    </string>

    <string name="pref_title_reminder">Remind before, minutes</string>
    <string name="pref_title_reminder_validation_error">It seems too big. We don\'t allow value for reminder more than %d minutes.</string>

    <string name="car_charged_title">Car charged</string>
    <string name="car_charged_descr">Your car should be charged by this time.</string>
    <string name="car_charged_time_desc">Your car should be charged by %s.</string>
    <string name="car_charged_time_snackbar_desc">Your car should be charged by %s. You will be notified at %s.</string>
    <string name="car_charged_channel_descr">Notifies you when your EV is charged</string>

    <string name="calendar_permission_rationale_title">Why do we ask permission</string>
    <string name="calendar_permission_rationale">Calendar permission is required to make reminder time customizable and create events faster.
We do NOT read your calendar events.
You can always change this in the application settings.
    </string>
    <string name="permission_dialog_allow">Allow access</string>
    <string name="permission_dialog_forbid">Forbid access</string>
    <string name="ok" translatable="false">OK</string>
    <string name="open">Open</string>
    <string name="calendar_permissions_not_granted">CALENDAR permissions were NOT granted.</string>
    <string name="remind_me_button_title">Remind me at %s</string>
    <string name="remaining_energy_title">%d%% battery remaining (%.1f of %.1fkWh)</string>
    <string name="current_description_title">Power line options:</string>
    <string name="amperage_title">A</string>
    <string name="voltage_title">V</string>
    <string name="should_be_charged_in_days_title">Car should be charged in %dd %02dh %02dm</string>
    <string name="should_be_charged_in_hours_title">Car should be charged in %dh %02dm</string>
    <string name="event_created">Calendar event created</string>
    <string name="first_time_settings_activity_message">Before continue fill your battery capacity and usual power line settings for more precise time calculation.</string>
    <string name="first_time_main_activity_message">This app is NOT connected to your car and cannot get its actual charging info.
Charge time calculation is estimated.</string>
    <string name="error_no_primary_calendar">The calendar is not found.
        Request for the calendar permission is disabled in the settings.
        Please follow your calendar instructions to create the notification.</string>
    <string name="error_creating_calendar_event">Unable to create calendar event automatically.
        Please follow your calendar instructions to create the notification.</string>
</resources>
